--- a/beszel/site/src/locales/it/it.po
+++ b/beszel/site/src/locales/it/it.po
@@ -30,8 +30,8 @@ msgstr "{0, plural, one {# ora} other {# ore}}"
 
 #. placeholder {0}: Math.trunc(system.info.u / 60)
 #: src/components/routes/system.tsx
-msgid "{0, plural, one {# minute} other {# minutes}}"
-msgstr ""
+msgid "{0, plural, one {# minute} few {# minutes} many {# minutes} other {# minutes}}"
+msgstr "{0, plural, one {# minuto} other {# minuti}}"
 
 #. placeholder {0}: table.getFilteredSelectedRowModel().rows.length
 #. placeholder {1}: table.getFilteredRowModel().rows.length
@@ -202,12 +202,12 @@ msgstr "Binario"
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bits (Kbps, Mbps, Gbps)"
-msgstr ""
+msgstr "Bit (Kbps, Mbps, Gbps)"
 
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bytes (KB/s, MB/s, GB/s)"
-msgstr ""
+msgstr "Byte (KB/s, MB/s, GB/s)"
 
 #: src/components/charts/mem-chart.tsx
 msgid "Cache / Buffers"
@@ -224,11 +224,11 @@ msgstr "Attenzione - possibile perdita di dati"
 
 #: src/components/routes/settings/general.tsx
 msgid "Celsius (°C)"
-msgstr ""
+msgstr "Celsius (°C)"
 
 #: src/components/routes/settings/general.tsx
 msgid "Change display units for metrics."
-msgstr ""
+msgstr "Modifica le unità di visualizzazione per le metriche."
 
 #: src/components/routes/settings/general.tsx
 msgid "Change general application options."
@@ -261,7 +261,7 @@ msgstr "Controlla il tuo servizio di notifica"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Click on a system to view more information."
-msgstr ""
+msgstr "Clicca su un sistema per visualizzare più informazioni."
 
 #: src/components/ui/input-copy.tsx
 msgid "Click to copy"
@@ -283,7 +283,7 @@ msgstr "Conferma password"
 
 #: src/components/routes/home.tsx
 msgid "Connection is down"
-msgstr ""
+msgstr "La connessione è interrotta"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -357,7 +357,7 @@ msgstr "Crea account"
 #. Context: date created
 #: src/components/alerts-history-columns.tsx
 msgid "Created"
-msgstr ""
+msgstr "Creato"
 
 #: src/components/routes/settings/general.tsx
 msgid "Critical (%)"
@@ -401,7 +401,7 @@ msgstr "I/O Disco"
 
 #: src/components/routes/settings/general.tsx
 msgid "Disk unit"
-msgstr ""
+msgstr "Unità disco"
 
 #: src/components/charts/disk-chart.tsx
 #: src/components/routes/system.tsx
@@ -439,11 +439,11 @@ msgstr "Offline"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Down ({downSystemsLength})"
-msgstr ""
+msgstr "Offline ({downSystemsLength})"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Duration"
-msgstr ""
+msgstr "Durata"
 
 #: src/components/add-system.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -505,7 +505,7 @@ msgstr "Esporta la configurazione attuale dei tuoi sistemi."
 
 #: src/components/routes/settings/general.tsx
 msgid "Fahrenheit (°F)"
-msgstr ""
+msgstr "Fahrenheit (°F)"
 
 #: src/lib/api.ts
 msgid "Failed to authenticate"
@@ -532,7 +532,7 @@ msgstr "Filtra..."
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Fingerprint"
-msgstr ""
+msgstr "Impronta digitale"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
@@ -686,7 +686,7 @@ msgstr "Traffico di rete delle interfacce pubbliche"
 #. Context: Bytes or bits
 #: src/components/routes/settings/general.tsx
 msgid "Network unit"
-msgstr ""
+msgstr "Unità rete"
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -770,7 +770,7 @@ msgstr "In pausa"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Paused ({pausedSystemsLength})"
-msgstr ""
+msgstr "In pausa ({pausedSystemsLength})"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -841,7 +841,7 @@ msgstr "Reimposta Password"
 #: src/components/alerts-history-columns.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Resolved"
-msgstr ""
+msgstr "Risolto"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Resume"
@@ -853,7 +853,7 @@ msgstr "Ruota token"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Rows per page"
-msgstr ""
+msgstr "Righe per pagina"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
@@ -918,7 +918,7 @@ msgstr "Ordina per"
 #. Context: alert state (active or resolved)
 #: src/components/alerts-history-columns.tsx
 msgid "State"
-msgstr ""
+msgstr "Stato"
 
 #: src/components/systems-table/systems-table.tsx
 #: src/lib/alerts.ts
@@ -942,7 +942,7 @@ msgstr "Sistema"
 
 #: src/components/routes/system.tsx
 msgid "System load averages over time"
-msgstr ""
+msgstr "Medie di carico del sistema nel tempo"
 
 #: src/components/navbar.tsx
 msgid "Systems"
@@ -968,7 +968,7 @@ msgstr "Temperatura"
 
 #: src/components/routes/settings/general.tsx
 msgid "Temperature unit"
-msgstr ""
+msgstr "Unità temperatura"
 
 #: src/components/routes/system.tsx
 msgid "Temperatures of system sensors"
@@ -992,7 +992,7 @@ msgstr "Questa azione non può essere annullata. Questo eliminerà permanentemen
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "This will permanently delete all selected records from the database."
-msgstr ""
+msgstr "Questo eliminerà permanentemente tutti i record selezionati dal database."
 
 #: src/components/routes/system.tsx
 msgid "Throughput of {extraFsName}"
@@ -1036,15 +1036,15 @@ msgstr "I token e le impronte digitali vengono utilizzati per autenticare le con
 
 #: src/lib/alerts.ts
 msgid "Triggers when 1 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Si attiva quando la media di carico di 1 minuto supera una soglia"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 15 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Si attiva quando la media di carico di 15 minuti supera una soglia"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 5 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Si attiva quando la media di carico di 5 minuti supera una soglia"
 
 #: src/lib/alerts.ts
 msgid "Triggers when any sensor exceeds a threshold"
@@ -1073,7 +1073,7 @@ msgstr "Attiva quando l'utilizzo di un disco supera una soglia"
 #. Temperature / network units
 #: src/components/routes/settings/general.tsx
 msgid "Unit preferences"
-msgstr ""
+msgstr "Preferenze unità"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -1093,7 +1093,7 @@ msgstr "Attivo"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Up ({upSystemsLength})"
-msgstr ""
+msgstr "Attivo ({upSystemsLength})"
 
 #: src/components/routes/system.tsx
 msgid "Uptime"
@@ -1122,7 +1122,7 @@ msgstr "Utenti"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Value"
-msgstr ""
+msgstr "Valore"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
@@ -1130,7 +1130,7 @@ msgstr "Vista"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
-msgstr ""
+msgstr "Visualizza i tuoi 200 avvisi più recenti."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Visible Fields"
